--- a/XF.Material/UI/Dialogs/MaterialBottomDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialBottomDialog.xaml
@@ -14,7 +14,7 @@
 
         <ScrollView Padding="0" Margin="0" VerticalOptions="End" BackgroundColor="Transparent">
 
-            <ui:MaterialCard HasShadow="True" Elevation="6" CornerRadius="0" ExtendedCornerRadius="12,12,0,0" Margin="0" Padding="0" BackgroundColor="White">
+            <ui:MaterialCard HasShadow="True" Elevation="6" CornerRadius="0" BackgroundColor="White" ExtendedCornerRadius="12,12,0,0" Margin="0" Padding="0">
                 <StackLayout x:Name="Container" VerticalOptions="End" BackgroundColor="Transparent">
 
                     <!--Хедер диалога-->
