--- a/XF.Material/UI/Dialogs/MaterialBottomMenuDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialBottomMenuDialog.xaml
@@ -11,12 +11,12 @@
 
     <ContentPage.Content>
 
-        <ScrollView Padding="0" Margin="0" VerticalOptions="End" BackgroundColor="White">
+        <ScrollView Padding="0" Margin="0" VerticalOptions="End" BackgroundColor="Transparent">
 
-            <ui:MaterialCard HasShadow="False" Elevation="0" Margin="0" Padding="0" ExtendedCornerRadius="14,14,0,0" BackgroundColor="White">
+            <ui:MaterialCard HasShadow="False" Elevation="0" Margin="0" Padding="0" CornerRadius="0"  ExtendedCornerRadius="14,14,0,0" BackgroundColor="White">
 
 
-                <StackLayout x:Name="Container" Margin="0" VerticalOptions="End" BackgroundColor="White">
+                <StackLayout x:Name="Container" Margin="0" VerticalOptions="End" BackgroundColor="Transparent">
 
 
                     <!--START: iPhone home bar support-->
