--- a/XF.Material/UI/Dialogs/MaterialBottomDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialBottomDialog.xaml
@@ -39,13 +39,13 @@
 
                         </ui:MaterialLabel>
 
-                        <ui:MaterialCard x:Name="Close" IsClickable="True" CornerRadius="18" BackgroundColor="{StaticResource IconBackground}" Padding="7" Margin="0" Elevation="0" HasShadow="False" VerticalOptions="Center" HorizontalOptions="EndAndExpand">
+                        <ui:MaterialCard x:Name="Close" IsClickable="True" CornerRadius="18" BackgroundColor="{StaticResource BottomSheet_IconBackground}" Padding="7" Margin="0" Elevation="0" HasShadow="False" VerticalOptions="Center" HorizontalOptions="EndAndExpand">
 
                             <ui:MaterialIcon  
                                 WidthRequest="24" 
                                 HeightRequest="24"
                                 Source="ic_close_24dp" 
-                                TintColor="{StaticResource IconTint}" />
+                                TintColor="{StaticResource BottomSheet_IconTint}" />
 
                         </ui:MaterialCard>
 
@@ -59,7 +59,7 @@
 
                     <!--Нижняя кнопка подтверждения-->
                     <!--<ui:MaterialButton x:Name="ActionButton" ButtonType="Flat" Margin="18,6,18,16" BackgroundColor="#00ceb0"/>-->
-                    <ui:MaterialCard x:Name="ActionButton" IsClickable="True" Margin="23,12,23,16" CornerRadius="7" Elevation="0" HasShadow="False" Padding="18,15" BackgroundColor="{StaticResource BlueAccent}">
+                    <ui:MaterialCard x:Name="ActionButton" IsClickable="True" Margin="23,12,23,16" CornerRadius="7" Elevation="0" HasShadow="False" Padding="18,15" BackgroundColor="{StaticResource BottomSheet_ActionButtonColor}">
                         <StackLayout>
 
                             <ui:MaterialLabel x:Name="text" HorizontalOptions="Center" HorizontalTextAlignment="Center" VerticalOptions="Center" FontSize="15" VerticalTextAlignment="Center" Padding="1" TextColor="White">
