--- a/XF.Material/UI/Dialogs/MaterialBottomDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialBottomDialog.xaml
@@ -14,8 +14,10 @@
 
         <ScrollView Padding="0" Margin="0" VerticalOptions="End" BackgroundColor="Transparent">
 
-            <ui:MaterialCard HasShadow="True" Elevation="6" CornerRadius="0" BackgroundColor="White" ExtendedCornerRadius="12,12,0,0" Margin="0" Padding="0">
+            <ui:MaterialCard HasShadow="True" Elevation="6" CornerRadius="0" BackgroundColor="White" ExtendedCornerRadius="16,16,0,0" Margin="0" Padding="0">
                 <StackLayout x:Name="Container" VerticalOptions="End" BackgroundColor="Transparent">
+
+                    <Frame x:Name="DragAnchor" IsVisible="False" HorizontalOptions="Center" Margin="0,12,0,8" WidthRequest="70" CornerRadius="3" HasShadow="False" Padding="0" HeightRequest="4.5" BackgroundColor="#ddd"/>
 
                     <!--Хедер диалога-->
                     <StackLayout x:Name="Header" Margin="21,16,21,16" Orientation="Horizontal">
