--- a/XF.Material/UI/Dialogs/MaterialLoadingDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialLoadingDialog.xaml
@@ -3,6 +3,7 @@
                              xmlns="http://xamarin.com/schemas/2014/forms"
                              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                              xmlns:local="clr-namespace:XF.Material.Forms.UI.Dialogs"
+                             xmlns:controls="clr-namespace:XF.Material.Forms.Controls"
                              xmlns:material="clr-namespace:XF.Material.Forms.UI"
                              BackgroundColor="#51000000"
                              CloseWhenBackgroundIsClicked="False">
@@ -27,14 +28,24 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <ActivityIndicator x:Name="LoadingImage" 
+                <ActivityIndicator x:Name="loading" 
                                    IsRunning="true"
                                    Grid.Column="0"
                                    HeightRequest="34"
                                    VerticalOptions="Center"
                                    Color="{StaticResource Material.Color.Primary}"
                                    WidthRequest="34" />
-                
+
+                <controls:MaterialCircleProgressView x:Name="progress" 
+                                             WidthRequest="28"  
+                                             HeightRequest="28"
+                                             Grid.Column="0" 
+                                             VerticalOptions="Center"
+                                             HorizontalOptions="Center"    
+                                             Animate="True"
+                                             Stroke="{OnPlatform Android=8, iOS=6}"
+                                             Color="{StaticResource Material.Color.Primary}" />
+
                 <material:MaterialLabel x:Name="Message"
                                         Grid.Column="1"
                                         Text="Lorem ipsum dolor sit amet."
