--- a/XF.Material/UI/Dialogs/MaterialBottomMenuDialog.xaml
+++ b/XF.Material/UI/Dialogs/MaterialBottomMenuDialog.xaml
@@ -14,7 +14,7 @@
 
         <ScrollView Padding="0" Margin="0" VerticalOptions="End" BackgroundColor="Transparent">
 
-            <ui:MaterialCard HasShadow="False" Elevation="0" Margin="0" Padding="0" CornerRadius="0"  ExtendedCornerRadius="16,16,0,0" BackgroundColor="White">
+            <ui:MaterialCard HasShadow="False" Elevation="0" Margin="0" Padding="0" CornerRadius="0"  ExtendedCornerRadius="16,16,0,0" BackgroundColor="{DynamicResource bg}">
 
 
                 <StackLayout x:Name="Container" Margin="0" VerticalOptions="End" BackgroundColor="Transparent">
@@ -33,7 +33,7 @@
                         <ui:MaterialLabel x:Name="Title" 
                                         VerticalOptions="Center"
                                         LineHeight="1"
-                                        TextColor="Black"
+                                        TextColor="{DynamicResource fg}"
                                         FontSize="18">
 
                             <ui:MaterialLabel.FontFamily>
